--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-remark-prismjs": "^6.7.0",
     "gatsby-remark-responsive-iframe": "^5.7.0",
     "gatsby-remark-smartypants": "^5.7.0",
+    "gatsby-remark-youtube": "^1.1.1",
     "gatsby-source-filesystem": "^4.7.0",
     "gatsby-source-pocket": "^3.0.1",
     "gatsby-transformer-remark": "^5.7.0",
