--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ name: CI
 # Controls when the workflow will run
 on:
   schedule:
-  - cron: "0 23 * * 7"
+  - cron: '30 23 * * 0'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
